--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   flutter:
     sdk: flutter
   speech_to_text: ^4.2.1
+  avatar_glow: ^2.0.2
+  translator: ^0.1.7
+  flutter_tts: ^3.3.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
