--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   avatar_glow: ^2.0.2
   translator: ^0.1.7
   flutter_tts: ^3.3.3
-
+  flutter_slider_drawer: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
