--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,9 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/conversation.jpg
-    - assets/about.jpg
-    - assets/basir.png
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
