--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   translator: ^0.1.7
   flutter_tts: ^3.3.3
   flutter_slider_drawer: ^2.0.0
+  clipboard: ^0.1.3
+  fluttertoast: ^8.0.8
+  carousel_slider: ^4.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
